--- a/开发者文档.md
+++ b/开发者文档.md
@@ -102,13 +102,8 @@ HanabiDownloadManager/
 使用Nuitka构建可执行文件：
 
 ```
-python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --windows-console-mode=disable --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client main.py
+python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --windows-console-mode=disable --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client --include-package-data=core --include-data-files=version.json=version.json main.py
 ```
-
-// 调整: 
-将 --windows-disable-console 改为 --windows-console-mode=disable（修复过时选项警告）
-将 --include-data-dir=connect=connect 和 --include-data-dir=client=client 改为 --include-package-data=connect 和 --include-package-data=client（解决目录无数据文件警告）
-// 内容解析: 使用Nuitka 编译 
 
 ## 贡献指南
 
