--- a/开发者文档.md
+++ b/开发者文档.md
@@ -102,7 +102,11 @@ HanabiDownloadManager/
 使用Nuitka构建可执行文件：
 
 ```
+# 无控制台版本(推荐)
 python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --windows-console-mode=disable --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client --include-package-data=core --include-data-files=version.json=version.json --disable-ccache --low-memory --follow-imports main.py
+
+# 有控制台版本(调试用)
+python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client --include-package-data=core --include-data-files=version.json=version.json --disable-ccache --low-memory --follow-imports main.py
 ```
 
 ## 贡献指南
