--- a/开发者文档.md
+++ b/开发者文档.md
@@ -103,9 +103,34 @@ HanabiDownloadManager/
 
 ```
 # 无控制台版本(推荐)
-python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --windows-console-mode=disable --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client --include-package-data=core --include-data-files=version.json=version.json --disable-ccache --low-memory --follow-imports main.py
+python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png ^
+  --output-dir=dist ^
+  --windows-console-mode=disable ^
+  --enable-plugin=pyside6 ^
+  --include-package-data=connect,client,core ^
+  --include-data-dir=resources=resources ^
+  --include-data-dir=core/font/font=core/font/font ^
+  --include-data-dir=core/font/icons=core/font/icons ^
+  --include-data-dir=core/download_core/core=core/download_core/core ^
+  --include-data-files=version.json=version.json ^
+  --follow-imports ^
+  --jobs=8 ^
+  --lto=yes ^
+  --assume-yes-for-downloads ^
+  --remove-output ^
+  --show-progress ^
+  --show-memory ^
+  --windows-company-name="Hanabi" ^
+  --windows-product-name="Hanabi Download Manager" ^
+  --windows-file-version="1.0.0.0" ^
+  --windows-product-version="1.0.0.0" ^
+  --python-flag=no_site ^
+  --python-flag=no_warnings ^
+  --python-flag=no_asserts ^
+  --enable-plugin=upx ^
+  main.py
 
-# 有控制台版本(调试用)
+# 有控制台版本(OLD)
 python -m nuitka --standalone --windows-icon-from-ico=resources/logo2.png --output-dir=dist --enable-plugin=pyside6 --include-data-dir=resources=resources --include-data-dir=core/font/font=core/font/font --include-data-dir=core/font/icons=core/font/icons --include-data-dir=core/download_core/core=core/download_core/core --include-package-data=connect --include-package-data=client --include-package-data=core --include-data-files=version.json=version.json --disable-ccache --low-memory --follow-imports main.py
 ```
 
